# inquisitron

./: LICENSE  pyproject.toml
src/inquisitron_aifij/: inquisitron.py
