[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inquisitron_aifij"
version = "0.0.1"
authors = [
  { name="Willem Suilen", email="contact@willemsuilen.com" },
]
description = "A package that will help journalist to investigate the content of large files."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wsuilen/inquisitron"
"Bug Tracker" = "https://github.com/wsuilen/inquisitron/issues"