[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inquisitron"
version = "0.0.1"
authors = []
description = "A package that will help journalist to investigate the content of large files."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "langchain",
    "openai",
    "tiktoken",
    "chromadb",
    "google-search-results"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wsuilen/inquisitron"
"Bug Tracker" = "https://github.com/wsuilen/inquisitron/issues"